Spacing fix for kiosk form actions.

--- a/docroot/sites/admissions.uiowa.edu/modules/admissions_core/sass/area-of-study-kiosk.scss
+++ b/docroot/sites/admissions.uiowa.edu/modules/admissions_core/sass/area-of-study-kiosk.scss
@@ -42,6 +42,8 @@
 
         .form-actions {
           width: 100%;
+          display: grid;
+          gap: 1rem;
           .button {
             flex: 46% 1 1;
             margin-bottom: 0;
